#2-products-design-changes

--- a/tarea6/app/pages/products/index.html
+++ b/tarea6/app/pages/products/index.html
@@ -27,7 +27,7 @@
                           <a class="nav-link me-5" href="#">Shop</a>
                       </li>
                       <li class="nav-item">
-                          <button type="button" class="btn btn-outline-primary" id="btn">Logout</button>
+                          <button type="button" class="btn btn-outline-primary px-4" id="btn">Logout</button>
                       </li>
                   </ul>
                 </div>
@@ -39,25 +39,24 @@
         <div>
           <div class="container">
             <div class="row">
-              <div class="col-12 my-3" id="theader">
+              <div class="col-12 my-3 ps-0 pb-3" id="theader">
                 <h1>Products</h1>
               </div>
-              <div class="col-12 my-3"></div>
-              <div class="col-12 my-3">
-                <button type="button" class="btn btn-outline-primary">Add Product</button>
+              <div class="col-12 mt-2 mb-4 ps-0">
+                <button type="button" class="btn btn-outline-primary px-4" id="btnbody">ADICIONAR PRODUCTO</button>
               </div>
             </div>
             <div class="row">
-              <div class="col-12">
+              <div class="col-12 px-0">
                 <table class="table">
                   <thead>
                     <tr>
                       <th scope="col">ID</th>
                       <th scope="col">TYPE</th>
                       <th scope="col">NAME</th>
-                      <th scope="col">PRICE</th>
-                      <th scope="col">IN STOCK</th>
-                      <th scope="col">IMAGE</th>
+                      <th class="cen" scope="col">PRICE</th>
+                      <th class="cen" scope="col">IN STOCK</th>
+                      <th class="cen" scope="col">IMAGE</th>
                       <th scope="col"></th>
                     </tr>
                   </thead>
@@ -66,9 +65,9 @@
                       <th scope="row">COS01</th>
                       <td>Cosmetic</td>
                       <td>Sephora Skin Care - 1 u</td>
-                      <td>$45.50</td>
-                      <td>4</td>
-                      <td>img</td>
+                      <td class="cen">$45.50</td>
+                      <td class="cen">4</td>
+                      <td class="cen">img</td>
                       <td>
                         <button type="button" class="btn btn-outline-primary">Edit</button>
                         <button type="button" class="btn btn-outline-danger">Delete</button>
@@ -78,9 +77,9 @@
                       <th scope="row">CLE02</th>
                       <td>Cleaning</td>
                       <td>Windex - 45 oz</td>
-                      <td>$23.00</td>
-                      <td>23</td>
-                      <td>img</td>
+                      <td class="cen">$23.00</td>
+                      <td class="cen">23</td>
+                      <td class="cen">img</td>
                       <td>
                         <button type="button" class="btn btn-outline-primary">Edit</button>
                         <button type="button" class="btn btn-outline-danger">Delete</button>
@@ -90,9 +89,9 @@
                       <th scope="row">BEA03</th>
                       <td>Beauty</td>
                       <td>Sephora Skin Care - 1 u</td>
-                      <td>$12.60</td>
-                      <td>12</td>
-                      <td>img</td>
+                      <td class="cen">$12.60</td>
+                      <td class="cen">12</td>
+                      <td class="cen">img</td>
                       <td>
                         <button type="button" class="btn btn-outline-primary">Edit</button>
                         <button type="button" class="btn btn-outline-danger">Delete</button>
